hphp/hack/test/typecheck/function_hint_with_variadic_parameter_wrong_types.php
<?hh

function variadic_int(int ...$y): void {}

function hint_mixed((function(int, int, bool): void) $f): void {}

function test(): void {
  hint_mixed(variadic_int<>);
}
